--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
     "autoprefixer": "^10.4.18",
-    "embla-carousel-auto-scroll": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.2.4",
     "maath": "^0.10.7",
     "postcss": "^8.4.35",
@@ -27,6 +25,7 @@
     "three": "^0.163.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.4",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
